[package]
name = "gnome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swarm-consensus = {path = "/home/dxtr/projects/swarm-consensus"}
bytes = "1.5.0"
futures = "0.3.30"

[dependencies.async-std]
 version = "1.12"
 features = ["attributes"]
