[package]
name = "gnome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a-swarm-consensus = {path = "/home/dxtr/projects/a-swarm-consensus"}
# bytes = "1.5.0"
futures = "0.3.30"
rsa = {version="0.10.0-pre.1",features=["sha2"]}
rand = "0.8.5"
aes-gcm = "0.10.3"
smol = "2.0.2"

# [dependencies.async-std]
#  version = "1.12"
#  features = ["attributes"]
